[gd_scene load_steps=84 format=2]

[ext_resource path="res://houseEnemies/Roomba/Roomba.gd" type="Script" id=1]
[ext_resource path="res://assets/RoombaTransformation.png" type="Texture" id=2]
[ext_resource path="res://assets/RoombaEnemy.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 3 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 3 )
region = Rect2( 192, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 3 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 3 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 3 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 3 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 3 )
region = Rect2( 160, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 3 )
region = Rect2( 192, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 3 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 3 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 3 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 3 )
region = Rect2( 160, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 3 )
region = Rect2( 192, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 3 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 3 )
region = Rect2( 32, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 3 )
region = Rect2( 64, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 3 )
region = Rect2( 96, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 3 )
region = Rect2( 128, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 3 )
region = Rect2( 160, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 3 )
region = Rect2( 192, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 3 )
region = Rect2( 32, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 160, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 160, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ) ],
"loop": true,
"name": "Roaming",
"speed": 3.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 0.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": false,
"name": "evilTurn",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": false,
"name": "peaceTurn",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 33.5, 15.5 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 32.5, 14.5 )

[node name="roombaEnemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Anim" type="AnimatedSprite" parent="."]
position = Vector2( 9.53674e-07, -1.90735e-06 )
scale = Vector2( 1.96875, 1.71875 )
frames = SubResource( 22 )
animation = "Roaming"

[node name="Bounce_hit_box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounce_hit_box"]
position = Vector2( -0.5, 11.5 )
shape = SubResource( 23 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 11.5 )
shape = SubResource( 24 )

[node name="RoombaPause" type="Timer" parent="."]
wait_time = 0.5

[node name="turningEvil" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="Bounce_hit_box" to="." method="_on_Bounce_hit_box_body_entered"]
[connection signal="timeout" from="RoombaPause" to="." method="_on_RoombaPause_timeout"]
[connection signal="timeout" from="turningEvil" to="." method="_on_turningEvil_timeout"]
